cambios nombres ejes movilidad

--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -226,7 +226,7 @@ es:
     header:
       administration_menu: Menú
       administration: Administración
-      collaborative_legislation: Laboratorio de ideas
+      collaborative_legislation: Ejes de movilidad
       debates: Debates
       locale: "Idioma:"
       management: Gestión
