--- a/config/locales/es/sdg.yml
+++ b/config/locales/es/sdg.yml
@@ -454,30 +454,30 @@ Para el logro de una movilidad para todos/as las propuestas deben respetar los s
           target_17_19:
             title: "De aquí a 2030, aprovechar las iniciativas existentes para elaborar indicadores que permitan medir los progresos en materia de desarrollo sostenible y complementen el producto interno bruto, y apoyar la creación de capacidad estadística en los países en desarrollo."
       help:
-        title: "Ayuda Objetivos de Desarrollo Sostenible"
+        title: "Ayuda Ejes de Movilidad Sostenible"
         description: "Puedes alinear tus aportaciones a la comunidad (debates, propuestas ciudadanas y proyectos de inversión) con los Objetivos de Desarrollo Sostenible de la Agenda 2030, esto nos permitirá tener una visión general de nuestra aportación en cada uno de los objetivos de desarrollo sostenible. A continuación puedes informarte de todos los objetivos, sus metas y las metas localizadas."
       show:
         read_more: "Leer más sobre %{goal}"
         read_less: "Leer menos sobre %{goal}"
         targets:
-          no_local_targets: Este objetivo no tiene metas localizadas
+          no_local_targets: Este eje no tiene metas localizadas
       title: "Objetivos de Desarrollo Sostenible"
       filter:
-        heading: "Filtros por ODS"
-        link: "Ver %{resources} del objetivo %{code}"
+        heading: "Filtros por ejes"
+        link: "Ver %{resources} del eje %{code}"
         more:
           one: "Un objetivo más"
           other: "%{count} objetivos más"
     related_list_selector:
       goal_identifier: "ODS%{code}"
-      goal_list: "Puedes seleccionar uno o varios ODS con los que se alinea tu %{record}"
+      goal_list: "Puedes seleccionar uno o varios ejes con los que se alinea tu %{record}"
       help:
-        title: "¿Qué ODS y metas se alinean con mi %{record}?"
-        text: "página de ayuda de ODS"
+        title: "¿Qué ejes y metas se alinean con mi %{record}?"
+        text: "página de ayuda de ejes de movilidad"
       hint: Puedes introducir el código de un objetivo/meta específico o un texto para encontrar uno. Para más información visita la %{link}.
       placeholder: "Escribe las etiquetas que desees"
       remove_tag: "Eliminar"
-      title: "Objetivos de Desarrollo Sostenible y Metas"
+      title: "Ejes de Movilidad Sostenible y Metas"
     targets:
       filter:
         link: "Ver %{resources} de la meta %{code}"
