cambios local sdg

--- a/config/locales/es/sdg.yml
+++ b/config/locales/es/sdg.yml
@@ -151,8 +151,7 @@ es:
 <h3>CORREDORES LOGÍSTICOS INTELIGENTES</h3>
 <p>Para mejorar el desempeño logístico del país, se ha desarrollado una hoja de ruta que mira a incrementar la digitalización de las cadenas logísticas en el país. Esta hoja de ruta incluye una mayor dotación de infraestructura de telecomunicaciones y la actualización del diagnóstico de la infraestructura de transporte con la inclusión de herramientas digitales para su planificación y gestión; la promoción del comercio electrónico y del ecosistema online de procesos logísticos y de comercialización; la gestión inteligente de flotas de transporte; y la adopción de nuevas tecnologías para una logística más sostenible.</p>
 
- <img src="/assets/nodos_logisticos.jpg" alt="nodos logísticos">
- 
+<div><img src="https://i.ibb.co/SBsDjBk/nodos-logisticos.jpg" alt="nodos-logisticos" border="0"></div>
 <h3>¿Cómo mejorar el reparto de paquetes y mercancías en los núcleos urbanos de Cantabria? (Distribución Urbana de Mercancías - DUM)</h3>
         <p>La distribución urbana de mercancías (DUM) cada vez está más presente en nuestras vidas y supone un impacto cada vez mayor en la movilidad de nuestras ciudades y núcleos urbanos.<p>
 <h4>EN QUÉ CONSISTE</h4>
