--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -188,7 +188,7 @@ es:
     site_customization/page: la página
     sdg/local_target: la meta localizada
   geozones:
-    none: Toda la ciudad
+    none: Toda la región
   layouts:
     application:
       chrome: Google Chrome
@@ -605,7 +605,7 @@ es:
       title: "Votaciones"
       participate_button: "Participar en esta votación"
       participate_button_expired: "Votación terminada"
-      no_geozone_restricted: "Toda la ciudad"
+      no_geozone_restricted: "Toda la región"
       geozone_restricted: "Distritos"
       geozone_info: "Pueden participar las personas empadronadas en: "
       already_answer: "Ya has participado en esta votación"
