--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -269,8 +269,8 @@ es:
       mark_as_unread: Marcar como no leída
       notifiable_hidden: Este elemento ya no está disponible.
   map:
-    title: "Distritos"
-    proposal_for_district: "Crea una propuesta para tu distrito"
+    title: "Áreas de la región"
+    proposal_for_district: "Crea una propuesta para tu área"
     start_proposal: Crea una propuesta
   omniauth:
     facebook:
@@ -606,7 +606,7 @@ es:
       participate_button: "Participar en esta votación"
       participate_button_expired: "Votación terminada"
       no_geozone_restricted: "Toda la región"
-      geozone_restricted: "Distritos"
+      geozone_restricted: "Áreas"
       geozone_info: "Pueden participar las personas empadronadas en: "
       already_answer: "Ya has participado en esta votación"
       not_logged_in: "Necesitas iniciar sesión o registrarte para participar"
@@ -743,8 +743,8 @@ es:
         see_all: "Ver todas"
     tags_cloud:
       tags: Tendencias
-      districts: "Distritos"
-      districts_list: "Listado de distritos"
+      districts: "Áreas"
+      districts_list: "Listado de áreas de la región"
       categories: "Categorías"
     target_blank: " (se abre en ventana nueva)"
     you_are_in: "Estás en"
