Varios cambios menores en las ayudas
Cambios menores

--- a/config/locales/es/legislation.yml
+++ b/config/locales/es/legislation.yml
@@ -68,7 +68,7 @@ es:
           help: Ayuda sobre ejes de movilidad 
         section_footer:
           title: Ayuda sobre ejes de movilidad 
-          description: Participa en los debates y procesos previos a la aprobación de nuevas normas o planes. Tu opinión será tenida en cuenta.
+          description: Aporta tu perspectiva sobre diferentes aspectos de la movilidad en Cantabria, organizados según los 9 ejes de movilidad.
       phase_not_open:
         not_open: Esta fase del proceso todavía no está abierta
       phase_empty:
