--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -217,7 +217,7 @@ es:
       consul_url: https://github.com/consul/consul
       contact_us: .
       copyright: SUM+LAB, %{year}
-      description: Este portal usa la %{consul} que es %{open_source}.
+      description: Este portal usa la %{consul} que es %{open_source}
       open_source: software de código abierto
       open_source_url: http://www.gnu.org/licenses/agpl-3.0.html
       participation_text: Decide cómo debe ser la ciudad que quieres.
@@ -387,7 +387,7 @@ es:
         help: Ayuda sobre las propuestas
       section_footer:
         title: Ayuda sobre las propuestas
-        description: Las propuestas ciudadanas son una oportunidad para que los vecinos y colectivos decidan directamente cómo quieren que sea su ciudad, después de conseguir los apoyos suficientes y de someterse a votación ciudadana.
+        description: La sección de propuestas ciudadanas permite a los usuarios registrados presentar o apoyar propuestas, para que sean estudiadas y en su caso llevadas a cabo.
     new:
       form:
         submit_button: Crear propuesta
