--- a/config/locales/es/pages.yml
+++ b/config/locales/es/pages.yml
@@ -1,7 +1,7 @@
 es:
   pages:
     conditions:
-      title: Condiciones de uso
+      title: Aviso legal
       subtitle: AVISO LEGAL SOBRE LAS CONDICIONES DE USO, PRIVACIDAD Y PROTECCIÓN DE DATOS PERSONALES DEL PORTAL DE GOBIERNO ABIERTO
       description: Página de información sobre las condiciones de uso, privacidad y protección de datos personales.
     help:
