--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -211,18 +211,18 @@ es:
           one: 1 Apoyo
           other: "Apoyos"
     footer:
-      accessibility: Accesibilidad
-      conditions: Condiciones de uso
+      accessibility:
+      conditions:
       consul: aplicación CONSUL
       consul_url: https://github.com/consul/consul
-      contact_us: .
+      contact_us: Contacto
       copyright: SUM+LAB, %{year}
       description: Este portal usa la %{consul} que es %{open_source}
       open_source: software de código abierto
       open_source_url: http://www.gnu.org/licenses/agpl-3.0.html
-      participation_text: Decide cómo debe ser la ciudad que quieres.
+      participation_text: Decide cómo debe ser la movilidad en Cantabria que quieres.
       participation_title: Participación
-      privacy: Política de privacidad
+      privacy: Aviso legal
     header:
       administration_menu: Menú
       administration: Administración
