--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -215,10 +215,10 @@ es:
       conditions:
       consul: aplicación CONSUL
       consul_url: https://github.com/consul/consul
-      contact_us: Contacto
+      contact_us: <a href="mailto:emovicantabria@unican.es">Contacto</a>
       copyright: SUM+LAB, %{year}
       description: Este portal usa la %{consul} que es %{open_source}
-      open_source: software de código abierto
+      open_source: software de código abierto.
       open_source_url: http://www.gnu.org/licenses/agpl-3.0.html
       participation_text: Decide cómo debe ser la movilidad en Cantabria que quieres.
       participation_title: Participación
