--- a/config/locales/es/sdg.yml
+++ b/config/locales/es/sdg.yml
@@ -433,7 +433,7 @@ es:
             title: "De aquí a 2030, aprovechar las iniciativas existentes para elaborar indicadores que permitan medir los progresos en materia de desarrollo sostenible y complementen el producto interno bruto, y apoyar la creación de capacidad estadística en los países en desarrollo."
       help:
         title: "Ayuda Ejes de Movilidad Sostenible"
-        description: "Puedes alinear tus aportaciones a la comunidad (debates, propuestas ciudadanas y proyectos de inversión) con los Objetivos de Desarrollo Sostenible de la Agenda 2030, esto nos permitirá tener una visión general de nuestra aportación en cada uno de los objetivos de desarrollo sostenible. A continuación puedes informarte de todos los objetivos, sus metas y las metas localizadas."
+        description: "Puedes alinear tus aportaciones a la comunidad (propuestas) con los Objetivos de Movilidad Sostenible definidos por el ministerio de trasnportes esto nos permitirá tener una visión general de nuestra aportación en cada uno de los objetivos de movilidad sostenible. A continuación puedes informarte de todos los objetivos y sus metas."
       show:
         read_more: "Leer más sobre %{goal}"
         read_less: "Leer menos sobre %{goal}"
