Ampliada la ayuda. Correo de contacto corregido.

--- a/config/locales/es/general.yml
+++ b/config/locales/es/general.yml
@@ -215,7 +215,7 @@ es:
       conditions:
       consul: aplicación CONSUL
       consul_url: https://github.com/consul/consul
-      contact_us: <a href="mailto:emovicantabria@unican.es">Contacto</a>
+      contact_us: <a href="mailto:emoviregional@unican.es">Contacto</a>
       copyright: SUM+LAB, %{year}
       description: Este portal usa la %{consul} que es %{open_source}
       open_source: software de código abierto.
